# DAW

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: clang-format.yml
Assets/test_project/: test_project.json
Source/: Constants.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  ProjectFilesManager.cpp  ProjectFilesManager.h  Toolbar.cpp  Toolbar.h  TrackManager.cpp  TrackManager.h
Source/Audio/: AudioClip.cpp  AudioClip.h  AudioClipSplitter.cpp  AudioClipSplitter.h  AudioExporter.cpp  AudioExporter.h  AudioTrack.cpp  AudioTrack.h  AudioTrackManager.cpp  AudioTrackManager.h  Fade.cpp  Fade.h  FadeCalculator.cpp  FadeTypes.h  MainAudio.cpp  MainAudio.h  Track.cpp  Track.h  TransportController.cpp  TransportController.h
Source/Fade/: Fade.cpp  Fade.h  FadeController.cpp  FadeController.h  FadeHandle.cpp  FadeHandle.h  FadeMouseHandler.cpp  FadeMouseHandler.h  FadeRenderer.cpp  FadeRenderer.h
Source/SideMenu/: SideMenu.cpp  SideMenu.h  ZoomSlider.cpp  ZoomSlider.h
Source/Toolbar/: MainToolbar.cpp  MainToolbar.h  ToolbarFactory.cpp  ToolbarFactory.h
Source/TopMenu/: Menu.cpp  Menu.h
Source/TrackPlayer/: ClipSplitBar.cpp  ClipSplitBar.h  ClipsBoxes.cpp  ClipsBoxes.h  ClipsBoxesComponent.cpp  ClipsBoxesComponent.h  TimeBar.cpp  TimeBar.h  Timeline.cpp  Timeline.h  TrackGui.cpp  TrackGui.h  TrackGuiComponent.cpp  TrackGuiComponent.h  TrackGuiManager.cpp  TrackGuiManager.h  TrackPlayer.cpp  TrackPlayer.h  TrackPlayerSideMenu.cpp  TrackPlayerSideMenu.h  Waveform.cpp  Waveform.h  trackGui.cpp  trackGui.h
Tests/Audio/: audioClipTest.cpp
